refactor : 전체 구조 변경(servic생성) 및 예외처리